# scservices

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  systemcore-toolchain.cmake
.github/workflows/: build.yml  sanitizers.yml
cmake/: SourceLink.cmake  aarch64-linux-gnu.cmake  source_link.json.in
common/: CMakeLists.txt  systemd-utils.cpp  systemd-utils.h  version.cpp  version.h
crossstreamdetect/: CMakeLists.txt  main.cpp
expansionhub/: CMakeLists.txt  CachedCommand.h  ControllerShared.h  EnabledState.cpp  EnabledState.h  ExpansionHub.service  ExpansionHubMotor.java  ExpansionHubNtState.cpp  ExpansionHubNtState.h  ExpansionHubPidConstants.java  ExpansionHubSerial.cpp  ExpansionHubSerial.h  MessageNumbers.h  MotorNtState.cpp  MotorNtState.h  PidConstants.cpp  PidConstants.h  PositionController.cpp  PositionController.h  ReceiveStateMachine.h  SerialPort.cpp  SerialPort.h  ServoNtState.cpp  ServoNtState.h  SystemDUsbMonitor.cpp  SystemDUsbMonitor.h  UvSerial.h  VelocityController.cpp  VelocityController.h  libsystemd.so.0.37.0  main.cpp  serial.c  serial.h
expansionhub/wpilib/java/: ExpansionHub.java  ExpansionHubMotor.java  ExpansionHubPositionConstants.java  ExpansionHubServo.java  ExpansionHubVelocityConstants.java
expansionhub/wpilib/python/: expansion_hub.py
kitcan/: CMakeLists.txt  main.cpp
libsystemd/: CMakeLists.txt
mcodometry/: CMakeLists.txt  generate_nanopb.py  main.cpp
mcodometry/proto/: Motioncore.proto
mcodometry/src/: MotioncoreProto.cpp  MotioncoreProto.h  main.cpp
mcodometry/src/proto/: Motioncore.npb.cpp  Motioncore.npb.h
powerdistribution/: CMakeLists.txt  main.cpp
radio/: CMakeLists.txt  main.cpp
scripts/: DeployExHubToMrc.ps1  DeployExHubToMrc.sh  DeployMcosToMrc.ps1  Launch-VsDevShell.ps1
